--- a/branchin-website.html
+++ b/branchin-website.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> Branching Practice Site </title>
+    <link rel="stylesheet" href="css/style.css" type="text.css">
 </head>
 
 <body>
